# alien_invasion

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: onpush.yml  pr.yml  run-game.yml
src/: alien.py  alien_invasion.py  bullet.py  game_functions.py  settings.py  ship.py
tools/: pre-commit
